2022-02-04  Per Arne Vollan  <pvollan@apple.com>

        [iOS][macOS] Adjust sysctl sandbox access
        https://bugs.webkit.org/show_bug.cgi?id=236082
        <rdar://problem/88436174>

        Reviewed by Brent Fulgham.

        Adjust sysctl sandbox access based on telemetry.

        * GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:
        * NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
        * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:

2022-02-04  Kate Cheney  <katherine_cheney@apple.com>

        Fix App Privacy Report redirect attribution
        https://bugs.webkit.org/show_bug.cgi?id=236111

        Reviewed by Brent Fulgham.

        * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
        (-[WKNetworkSessionDelegate URLSession:task:willPerformHTTPRedirection:newRequest:completionHandler:]):

2022-02-04  Ben Nham  <nham@apple.com>

        Import APSConnection-related SPI
        https://bugs.webkit.org/show_bug.cgi?id=235856

        Reviewed Youenn Fablet.

        This imports the SPI declarations necessary to build against ApplePushService in WebKit. It
        also includes a PushServiceConnection interface that can sit in front of APSConnection, and
        a fake interface that will be fleshed out for testing purposes.

        * Platform/spi/Cocoa/ApplePushServiceSPI.h: Added.
        * WebKit.xcodeproj/project.pbxproj:
        * webpushd/ApplePushServiceConnection.h: Added.
        * webpushd/ApplePushServiceConnection.mm: Added.
        (-[_WKAPSConnectionDelegate initWithConnection:]):
        (-[_WKAPSConnectionDelegate connection:didReceivePublicToken:]):
        (-[_WKAPSConnectionDelegate connection:didReceiveIncomingMessage:]):
        (WebPushD::ApplePushServiceConnection::ApplePushServiceConnection):
        (WebPushD::makeTokenInfo):
        (WebPushD::ApplePushServiceConnection::subscribe):
        (WebPushD::ApplePushServiceConnection::unsubscribe):