@@ -1,5 +1,17 @@
 2022-02-04  Per Arne Vollan  <pvollan@apple.com>
 
+        [macOS][WP] Add telemetry for syscalls used during launch
+        https://bugs.webkit.org/show_bug.cgi?id=235865
+        <rdar://problem/88228583>
+
+        Reviewed by Brent Fulgham.
+
+        Add telemetry in the WebContent process' sandbox on macOS to determine which syscalls are used only during launch.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
+2022-02-04  Per Arne Vollan  <pvollan@apple.com>
+
         [iOS][macOS] Adjust sysctl sandbox access
         https://bugs.webkit.org/show_bug.cgi?id=236082
         <rdar://problem/88436174>
